# fast

./: CMakeLists.txt  FastConfig.cmake.in  README.md
test/: test.cpp
